# market-access-python-frontend

./: .coveragerc  .eslintignore  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .profile  CODEOWNERS  LICENSE  Makefile  Pipfile  Procfile  README.md  docker-compose.local-template.env  docker-compose.test.env  docker-compose.test.yml  docker-compose.yml  gulpfile.js  jsconfig.json  manifest.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  release-tasks.sh  requirements-dev.txt  requirements-test.txt  requirements.txt  run-end-to-end.sh  run_e2e_tests.sh  tsconfig.json  webpack.config.js
.circleci/: config.yml
.copilot/: config.yml
.devcontainer/: docker-compose.yml
.docker/: canary.json  features.json
.github/actions/: generate-requirements-txt.sh
.github/workflows/: codeql-analysis.yml  dependabot-generate-requirements-txt.yml  recreate-poetry-requirements.yml
assessments/: apps.py
authentication/: apps.py  decorators.py  middleware.py
barriers/: apps.py  constants.py  forms.py  models.py  urls.py  views.py
barriers/fixtures/: assessments.json  barriers.json  team_members.json
barriers/forms/: action_plans.py  archive.py  assessments.py  categories.py  commodities.py  companies.py  constants.py  edit.py  estimated_resolution_date.py  export_types.py  feedback.py  government_organisations.py  hs_codes.py  is_temporary.py  location.py  mixins.py  notes.py  policy_teams.py  public_barriers.py  publish.py  saved_searches.py  search.py  sectors.py  statuses.py  teams.py  types.py  various.py  watchlist.py  wto.py
barriers/models/: __init__.py  action_plans.py  assessments.py  barrier_download.py  barriers.py  commodities.py  companies.py  documents.py  erd_request.py  feature_flags.py  feedback.py  history.py  hs_codes.py  notes.py  saved_searches.py  watchlists.py  wto.py
barriers/templatetags/: activity.py  assessments.py  (+5 more)
companies_house/: api_client.py  dataclasses.py
company_house/: company_house_api.py  dataclasses.py
config/: sample.env  settings.py  testrunner.py  urls.py  wsgi.py
core/: apps.py  filecache.py  forms.py  resources.py  tests.py  urls.py  views.py
healthcheck/: README.md  checks.py  constants.py  middleware.py  models.py  urls.py  views.py
interactions/: apps.py  models.py
partials/: callout.py
pingdom/: apps.py  services.py  urls.py  views.py
reports/: constants.py  helpers.py  location_views copy.py  location_views.py  models.py  report_barrier_forms.py  report_barrier_view.py  report_views.py  urls.py  views.py
templates/: 403.html  404.html  500.html  accessibility.html  back_link.html  base.html  error_summary.html  feedback-thanks.html  feedback.html  footer.html  header.html  heading.html  pagination.html
test_frontend/: __init__.py  conftest.py  pytest.ini  requirements.txt  test_account_home.py  test_add_barrier.py  test_barrier_report.py  test_dashboard.py  test_download_barriers.py  test_estimated_resolution.py  test_estimated_resolution_date.py  test_policy_team.py  test_progress_update.py  test_publishing.py  test_search.py  test_status_change.py  test_stress.py  test_tag_assignment.py  test_top_100.py  test_update_barrier.py  utils.py
test_frontend_load/: conftest.py  pytest.ini  requirements.txt  test_stress.py
tests/: constants.py
tools/: secret_keygen.py
ui_tests/: conftest.py  pytest.ini  settings.py  test_add_a_barrier.py  test_add_note.py  test_barrier_history.py  test_barrier_priority.py  test_change_priority.py  test_change_status.py  test_create_barrier.py  test_dashboard.py  test_economic_assessment.py  test_examples.py  test_find_a_barrier.py  test_login.py  test_my_team_barriers.py  test_save_watchlist.py  test_search.py  test_watchlist_updated_date.py
ui_tests_playwright/: conftest.py  test_barrier_history.py  test_example.py  test_examples.py
users/: constants.py  datahub.py  forms.py  helpers.py  middleware.py  mixins.py  models.py  permissions.py  sessions.py  urls.py  views.py
utils/: api_client.py  company_search.py  context_processors.py  datahub.py  diff.py  exceptions.py  forms.py  helpers.py  metadata.py  middleware.py  models.py  pagination.py  react.py  referers.py  sessions.py  sso.py  tools.py  validators.py
(+942 files in other folders)
