[tool.poetry]
name = "market-access-python-frontend"
version = "0.1.0"
description = "Hello"
authors = ["Ferenc Csepregi <feri@31.digital>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "==3.2.15"
django-environ = "==0.4.5"
django-extensions = "==3.0.9"
django-log-formatter-ecs = "==0.0.5"
django-model-utils = "==4.0.0"
django-redis = "==4.12.1"
django-settings-export = "==1.2.1"
elastic-apm = "~=6.3"
gunicorn = "==20.0.4"
gevent = "==20.9.0"
greenlet = "==0.4.17"
mohawk = "==1.1.0"
psycopg2-binary = "==2.8.6"
python-json-logger = "==2.0.0"
python-dateutil = "==2.8.1"
python-magic = "==0.4.18"
redis = "==3.5.3"
requests = "==2.25.1"
sentry-sdk = "==0.18.0"
whitenoise = "==5.2.0"
simplejson = "==3.17.2"
urllib3 = "~=1.26.5"
django-webpack-loader = "~=1.3.0"
django-formtools = "^2.3"

[tool.poetry.dev-dependencies]
black = "~=22.3.0"
flake8 = "~=5.0.4"
ipython = "==7.31.1"
isort = "^5.10.1"
mock = "~=4.0.1"
pyopenssl = "~=19.1.0"
pytest-cov = "~=2.10.1"
pytest-django = "4.5.2"
pytest-xdist = "~=2.1.0"
splinter = "~=0.17.0"
werkzeug = "~=1.0.0"
selenium = "^4.1.3"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
