[tool.poetry]
name = "market-access-python-frontend"
version = "0.1.0"
description = "Hello"
authors = ["Ferenc Csepregi <feri@31.digital>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "==3.2.20"
django-environ = "==0.4.5"
django-extensions = "==3.0.9"
django-log-formatter-ecs = "==0.0.5"
django-model-utils = "==4.0.0"
django-redis = "==4.12.1"
django-settings-export = "==1.2.1"
elastic-apm = "~=6.3"
gunicorn = "==20.0.4"
gevent = "==23.9.1"
greenlet = "^3.0.0"
mohawk = "==1.1.0"
psycopg2-binary = "==2.9.5"
python-json-logger = "==2.0.0"
python-dateutil = "==2.8.1"
python-magic = "==0.4.18"
redis = "==4.5.4"
requests = "==2.31.0"
sentry-sdk = "==1.14.0"
whitenoise = "==5.2.0"
simplejson = "==3.17.2"
urllib3 = "~=1.26.18"
django-webpack-loader = "~=1.3.0"
django-formtools = "^2.3"
certifi = "2023.07.22"
sqlparse = "0.4.4"
cryptography = "~=41.0.4"

[tool.poetry.dev-dependencies]
black = "~=22.3.0"
flake8 = "~=5.0.0"
ipython = "==8.10.0"
isort = "^5.10.1"
mock = "~=4.0.1"
pyopenssl = "~=19.1.0"
pytest-cov = "~=2.10.1"
pytest-django = "4.5.2"
pytest-xdist = "~=2.1.0"
pytest-order = "~=1.1.0"
splinter = "~=0.17.0"
werkzeug = "~=3.0.1"
selenium = "^4.1.3"
coverage = "^7.2.7"
pytest-watch = "^4.2.0"
playwright = "^1.39.0"

[build-system]
requires = ["poetry~=1.6.1"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

addopts = """
    --reuse-db
    --ds=config.settings.test
"""

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*__init__*",
    "*test_*",
]

[tool.isort]
profile = "black"
